syntax = "proto3";

package com.shoalter.grpc;

option java_multiple_files = true;
option java_package = "com.shoalter.grpc";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
  rpc serverSideStreamingGetStock(Stock) returns (stream StockQuote) {}

  rpc clientSideStreamingGetStatisticsOfStocks(stream Stock) returns (StockQuote) {}

  rpc bidirectionalStreamingGetListsStockQuotes(stream Stock) returns (stream StockQuote) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message Stock {
  string description = 1;
}
message StockQuote {
  double price = 1;
  int32 offer_number = 2;
  string description = 3;
}